@@ -12,6 +12,7 @@ import org.digma.intellij.plugin.view.ListGroupManager;
 import org.digma.intellij.plugin.view.ListViewItemBuilder;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -54,6 +55,18 @@ public class GroupListViewItemBuilder<T extends CodeObjectInsight> implements Li
                 WorkspaceUrisHelper.findWorkspaceUrisForSpans(project,theListView, getSpanIds((SpanScalingInsight) insight), methodInfo);
                 break;
             }
+            case SpanEndpointBottleneck: {
+                WorkspaceUrisHelper.findWorkspaceUrisForMethodCodeObjectIds(project, theListView, getCodeObjectIds((SpanSlowEndpointsInsight) insight), methodInfo);
+                break;
+            }
+            case SpanUsages: {
+                WorkspaceUrisHelper.findWorkspaceUrisForMethodCodeObjectIds(project, theListView, getCodeObjectIds((SpanUsagesInsight) insight), methodInfo);
+                break;
+            }
+            case SpanScalingRootCause: {
+                WorkspaceUrisHelper.findWorkspaceUrisForMethodCodeObjectIds(project, theListView, getCodeObjectIds((SpanScalingRootCauseInsight) insight), methodInfo);
+                break;
+            }
         }
 
         theGroup.addItem(theListView);
@@ -61,16 +74,41 @@ public class GroupListViewItemBuilder<T extends CodeObjectInsight> implements Li
         return List.of();
     }
 
+    private List<String> getCodeObjectIds(SpanUsagesInsight insight) {
+        var codeObjectIds = new ArrayList<String>();
+        for (SpanFlow ins: insight.getFlows()) {
+            var firstServiceId = ins.getFirstService();
+            if (firstServiceId != null)
+                codeObjectIds.add(firstServiceId.getCodeObjectId());
+            var lastServiceId = ins.getLastService();
+            if (lastServiceId != null)
+                codeObjectIds.add(lastServiceId.getCodeObjectId());
+        }
+        return codeObjectIds;
+    }
+
+    private List<String> getCodeObjectIds(SpanScalingRootCauseInsight insight) {
+        return insight.getAffectedEndpoints().stream().filter(it -> it.getCodeObjectId() != null)
+                .map(it -> it.getCodeObjectId())
+                .toList();
+    }
+
+    private List<String> getCodeObjectIds(SpanSlowEndpointsInsight insight) {
+        return insight.getSlowEndpoints().stream().filter(it -> it.getEndpointInfo().getCodeObjectId() != null)
+                .map(it -> it.getEndpointInfo().getCodeObjectId())
+                .toList();
+    }
+
     private List<String> getSpanIds(SpanScalingInsight insight) {
         return insight.getRootCauseSpans().stream()
                 .map(it -> CodeObjectsUtil.createSpanId(it.getInstrumentationLibrary(), it.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<String> getSpanIds(SlowestSpansInsight insight) {
        return insight.getSpans().stream()
                 .map(it -> CodeObjectsUtil.createSpanId(it.getSpanInfo().getInstrumentationLibrary(), it.getSpanInfo().getName()))
-                .collect(Collectors.toList());
+               .toList();
     }
 
     private List<String> getSpanIds(SpanDurationBreakdownInsight insight) {
